fix: section spacing

--- a/src/components/SectionHeader/sectionHeader.module.scss
+++ b/src/components/SectionHeader/sectionHeader.module.scss
@@ -19,15 +19,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    margin-bottom: 10px;
-    gap: 15px;
-    padding-bottom: 10px;
+    margin-bottom: 0;
+    gap: 0;
+    padding-bottom: 0;
 
     &__title {
       color: var(--color-primary-light);
       font-weight: 600;
       font-size: 0.95rem;
       white-space: nowrap;
+      margin-bottom: 10px;
     }
   }
 }
